--- a/ml/LightGBM/LightGBM_Classification_ver_2.ipynb
+++ b/ml/LightGBM/LightGBM_Classification_ver_2.ipynb
@@ -5,12 +5,12 @@
    "id": "a6bfdc44",
    "metadata": {},
    "source": [
-    "# LightGBM을 사용한 ML(폐업률 평균값 기준으로 이진분류 )"
+    "# LightGBM을 사용한 ML(폐업률 평균값 기준으로 이진분류)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 327,
    "id": "e9a8d5ef",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 328,
    "id": "49a66aaf",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 329,
    "id": "c331f023",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
        "[5 rows x 137 columns]"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 329,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 330,
    "id": "429a026d",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 331,
    "id": "3430f9be",
    "metadata": {},
    "outputs": [
@@ -583,7 +583,7 @@
        "[8 rows x 134 columns]"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 331,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 332,
    "id": "18207207",
    "metadata": {},
    "outputs": [
@@ -628,7 +628,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 339,
+   "id": "b7c2f935",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "63"
+      ]
+     },
+     "execution_count": 339,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['서비스_업종_코드_명'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
    "id": "3ac32385",
    "metadata": {},
    "outputs": [],
@@ -644,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 334,
    "id": "2f94c4c0",
    "metadata": {},
    "outputs": [
@@ -679,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 335,
    "id": "5801956b",
    "metadata": {},
    "outputs": [
@@ -715,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 336,
    "id": "44f95330",
    "metadata": {},
    "outputs": [],
@@ -744,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 337,
    "id": "fab48537",
    "metadata": {},
    "outputs": [
@@ -758,7 +779,7 @@
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-24 {\n",
+       "<style>#sk-container-id-25 {\n",
        "  /* Definition of color scheme common for light and dark mode */\n",
        "  --sklearn-color-text: black;\n",
        "  --sklearn-color-line: gray;\n",
@@ -788,15 +809,15 @@
        "  }\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 {\n",
+       "#sk-container-id-25 {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 pre {\n",
+       "#sk-container-id-25 pre {\n",
        "  padding: 0;\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 input.sk-hidden--visually {\n",
+       "#sk-container-id-25 input.sk-hidden--visually {\n",
        "  border: 0;\n",
        "  clip: rect(1px 1px 1px 1px);\n",
        "  clip: rect(1px, 1px, 1px, 1px);\n",
@@ -808,7 +829,7 @@
        "  width: 1px;\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 div.sk-dashed-wrapped {\n",
+       "#sk-container-id-25 div.sk-dashed-wrapped {\n",
        "  border: 1px dashed var(--sklearn-color-line);\n",
        "  margin: 0 0.4em 0.5em 0.4em;\n",
        "  box-sizing: border-box;\n",
@@ -816,7 +837,7 @@
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 div.sk-container {\n",
+       "#sk-container-id-25 div.sk-container {\n",
        "  /* jupyter's `normalize.less` sets `[hidden] { display: none; }`\n",
        "     but bootstrap.min.css set `[hidden] { display: none !important; }`\n",
        "     so we also need the `!important` here to be able to override the\n",
@@ -826,7 +847,7 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 div.sk-text-repr-fallback {\n",
+       "#sk-container-id-25 div.sk-text-repr-fallback {\n",
        "  display: none;\n",
        "}\n",
        "\n",
@@ -842,14 +863,14 @@
        "\n",
        "/* Parallel-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-24 div.sk-parallel-item::after {\n",
+       "#sk-container-id-25 div.sk-parallel-item::after {\n",
        "  content: \"\";\n",
        "  width: 100%;\n",
        "  border-bottom: 2px solid var(--sklearn-color-text-on-default-background);\n",
        "  flex-grow: 1;\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 div.sk-parallel {\n",
+       "#sk-container-id-25 div.sk-parallel {\n",
        "  display: flex;\n",
        "  align-items: stretch;\n",
        "  justify-content: center;\n",
@@ -857,28 +878,28 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 div.sk-parallel-item {\n",
+       "#sk-container-id-25 div.sk-parallel-item {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 div.sk-parallel-item:first-child::after {\n",
+       "#sk-container-id-25 div.sk-parallel-item:first-child::after {\n",
        "  align-self: flex-end;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 div.sk-parallel-item:last-child::after {\n",
+       "#sk-container-id-25 div.sk-parallel-item:last-child::after {\n",
        "  align-self: flex-start;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 div.sk-parallel-item:only-child::after {\n",
+       "#sk-container-id-25 div.sk-parallel-item:only-child::after {\n",
        "  width: 0;\n",
        "}\n",
        "\n",
        "/* Serial-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-24 div.sk-serial {\n",
+       "#sk-container-id-25 div.sk-serial {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "  align-items: center;\n",
@@ -896,14 +917,14 @@
        "\n",
        "/* Pipeline and ColumnTransformer style (default) */\n",
        "\n",
-       "#sk-container-id-24 div.sk-toggleable {\n",
+       "#sk-container-id-25 div.sk-toggleable {\n",
        "  /* Default theme specific background. It is overwritten whether we have a\n",
        "  specific estimator or a Pipeline/ColumnTransformer */\n",
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
        "/* Toggleable label */\n",
-       "#sk-container-id-24 label.sk-toggleable__label {\n",
+       "#sk-container-id-25 label.sk-toggleable__label {\n",
        "  cursor: pointer;\n",
        "  display: block;\n",
        "  width: 100%;\n",
@@ -913,7 +934,7 @@
        "  text-align: center;\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-25 label.sk-toggleable__label-arrow:before {\n",
        "  /* Arrow on the left of the label */\n",
        "  content: \"▸\";\n",
        "  float: left;\n",
@@ -921,13 +942,13 @@
        "  color: var(--sklearn-color-icon);\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 label.sk-toggleable__label-arrow:hover:before {\n",
+       "#sk-container-id-25 label.sk-toggleable__label-arrow:hover:before {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
        "/* Toggleable content - dropdown */\n",
        "\n",
-       "#sk-container-id-24 div.sk-toggleable__content {\n",
+       "#sk-container-id-25 div.sk-toggleable__content {\n",
        "  max-height: 0;\n",
        "  max-width: 0;\n",
        "  overflow: hidden;\n",
@@ -936,12 +957,12 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 div.sk-toggleable__content.fitted {\n",
+       "#sk-container-id-25 div.sk-toggleable__content.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 div.sk-toggleable__content pre {\n",
+       "#sk-container-id-25 div.sk-toggleable__content pre {\n",
        "  margin: 0.2em;\n",
        "  border-radius: 0.25em;\n",
        "  color: var(--sklearn-color-text);\n",
@@ -949,79 +970,79 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 div.sk-toggleable__content.fitted pre {\n",
+       "#sk-container-id-25 div.sk-toggleable__content.fitted pre {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
+       "#sk-container-id-25 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
        "  /* Expand drop-down */\n",
        "  max-height: 200px;\n",
        "  max-width: 100%;\n",
        "  overflow: auto;\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-25 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
        "  content: \"▾\";\n",
        "}\n",
        "\n",
        "/* Pipeline/ColumnTransformer-specific style */\n",
        "\n",
-       "#sk-container-id-24 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-25 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-25 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator-specific style */\n",
        "\n",
        "/* Colorize estimator box */\n",
-       "#sk-container-id-24 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-25 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-25 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 div.sk-label label.sk-toggleable__label,\n",
-       "#sk-container-id-24 div.sk-label label {\n",
+       "#sk-container-id-25 div.sk-label label.sk-toggleable__label,\n",
+       "#sk-container-id-25 div.sk-label label {\n",
        "  /* The background is the default theme color */\n",
        "  color: var(--sklearn-color-text-on-default-background);\n",
        "}\n",
        "\n",
        "/* On hover, darken the color of the background */\n",
-       "#sk-container-id-24 div.sk-label:hover label.sk-toggleable__label {\n",
+       "#sk-container-id-25 div.sk-label:hover label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
        "/* Label box, darken color on hover, fitted */\n",
-       "#sk-container-id-24 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
+       "#sk-container-id-25 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator label */\n",
        "\n",
-       "#sk-container-id-24 div.sk-label label {\n",
+       "#sk-container-id-25 div.sk-label label {\n",
        "  font-family: monospace;\n",
        "  font-weight: bold;\n",
        "  display: inline-block;\n",
        "  line-height: 1.2em;\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 div.sk-label-container {\n",
+       "#sk-container-id-25 div.sk-label-container {\n",
        "  text-align: center;\n",
        "}\n",
        "\n",
        "/* Estimator-specific */\n",
-       "#sk-container-id-24 div.sk-estimator {\n",
+       "#sk-container-id-25 div.sk-estimator {\n",
        "  font-family: monospace;\n",
        "  border: 1px dotted var(--sklearn-color-border-box);\n",
        "  border-radius: 0.25em;\n",
@@ -1031,18 +1052,18 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 div.sk-estimator.fitted {\n",
+       "#sk-container-id-25 div.sk-estimator.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
        "/* on hover */\n",
-       "#sk-container-id-24 div.sk-estimator:hover {\n",
+       "#sk-container-id-25 div.sk-estimator:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 div.sk-estimator.fitted:hover {\n",
+       "#sk-container-id-25 div.sk-estimator.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
@@ -1129,7 +1150,7 @@
        "\n",
        "/* \"?\"-specific style due to the `<a>` HTML tag */\n",
        "\n",
-       "#sk-container-id-24 a.estimator_doc_link {\n",
+       "#sk-container-id-25 a.estimator_doc_link {\n",
        "  float: right;\n",
        "  font-size: 1rem;\n",
        "  line-height: 1em;\n",
@@ -1144,30 +1165,30 @@
        "  border: var(--sklearn-color-unfitted-level-1) 1pt solid;\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 a.estimator_doc_link.fitted {\n",
+       "#sk-container-id-25 a.estimator_doc_link.fitted {\n",
        "  /* fitted */\n",
        "  border: var(--sklearn-color-fitted-level-1) 1pt solid;\n",
        "  color: var(--sklearn-color-fitted-level-1);\n",
        "}\n",
        "\n",
        "/* On hover */\n",
-       "#sk-container-id-24 a.estimator_doc_link:hover {\n",
+       "#sk-container-id-25 a.estimator_doc_link:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-3);\n",
        "  color: var(--sklearn-color-background);\n",
        "  text-decoration: none;\n",
        "}\n",
        "\n",
-       "#sk-container-id-24 a.estimator_doc_link.fitted:hover {\n",
+       "#sk-container-id-25 a.estimator_doc_link.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-24\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LGBMClassifier(bagging_fraction=0.82, bagging_freq=3, boosting=&#x27;gbdt&#x27;,\n",
+       "</style><div id=\"sk-container-id-25\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LGBMClassifier(bagging_fraction=0.82, bagging_freq=3, boosting=&#x27;gbdt&#x27;,\n",
        "               class_weight={0: 1.0, 1: 2.0}, feature_fraction=0.76,\n",
        "               learning_rate=0.05, max_depth=10, min_data_in_leaf=300,\n",
        "               min_split_gain=0.12, n_estimators=6000, n_jobs=-1, num_leaves=35,\n",
        "               objective=&#x27;binary&#x27;, random_state=42, reg_alpha=3.5,\n",
-       "               reg_lambda=14.0, verbosity=-1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-24\" type=\"checkbox\" checked><label for=\"sk-estimator-id-24\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;LGBMClassifier<span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LGBMClassifier(bagging_fraction=0.82, bagging_freq=3, boosting=&#x27;gbdt&#x27;,\n",
+       "               reg_lambda=14.0, verbosity=-1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-25\" type=\"checkbox\" checked><label for=\"sk-estimator-id-25\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;LGBMClassifier<span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LGBMClassifier(bagging_fraction=0.82, bagging_freq=3, boosting=&#x27;gbdt&#x27;,\n",
        "               class_weight={0: 1.0, 1: 2.0}, feature_fraction=0.76,\n",
        "               learning_rate=0.05, max_depth=10, min_data_in_leaf=300,\n",
        "               min_split_gain=0.12, n_estimators=6000, n_jobs=-1, num_leaves=35,\n",
@@ -1183,7 +1204,7 @@
        "               reg_lambda=14.0, verbosity=-1)"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 337,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": null,
    "id": "0e8e76ba",
    "metadata": {},
    "outputs": [
@@ -1277,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": null,
    "id": "44beea33",
    "metadata": {},
    "outputs": [
@@ -1314,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": null,
    "id": "6cf7c726",
    "metadata": {},
    "outputs": [
@@ -1348,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": null,
    "id": "5d00e34f",
    "metadata": {},
    "outputs": [
@@ -1398,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": null,
    "id": "50c6f881",
    "metadata": {},
    "outputs": [
